--- a/wally.toml
+++ b/wally.toml
@@ -1,8 +1,9 @@
 [package]
-name = "roblox/roact"
+name = "cloud-entertainment/roact"
 version = "1.4.0"
 license = "Apache-2.0"
-registry = "https://github.com/UpliftGames/wally-index"
+registry = "https://github.com/Cloud-Entertainment/wally-index"
 realm = "shared"
+exclude = ["wally.exe"]
 
 [dependencies]
