--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,7 @@
 /*.rbxl
 # let selene re-generate roblox.toml so it updates automatically with selene
 roblox.toml
+
+Packages
+ServerPackages
+DevPackages
